# pico-freertos-demo

./: .gitignore  CMakeLists.txt  main.c
